# whyme

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh
.cargo/: config.toml
.github/workflows/: test-windows.yml
scripts/: list-devices.rs
src/: main.rs
